rssportscars.com (archived on 2017-06-06)
{
  "alexa_rank": 860378,
  "analysis_subcorpus": true,
  "categories": "vehicles",
  "char_count": 4316,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.24,
  "homepage_snapshot_redirected_domain": "rssportscars.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170316013343id_/http://www.rssportscars.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170316013343id_/http%3A//rssportscars.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "rssportscars.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606001837id_/http%3A//www.rssportscars.com/site/privacy-policy",
  "policy_title": "Privacy Policy - RSsportscars.com",
  "policy_url": "rssportscars.com/site/privacy-policy",
  "sha1": "4fc3dce4433c2f83224556a183ed503cb4606de1",
  "simhash": 9826589661162307737,
  "simhash_updated": false,
  "site_hostname": "rssportscars.com",
  "site_url": "http://rssportscars.com",
  "smog": 13.82,
  "strict_updated": false,
  "timestamp": "20170606001837",
  "word_count": 699,
  "year": 2017
}

--- a/r/rs/rss/rssportscars.com.html
+++ b/r/rs/rss/rssportscars.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rssportscars.com privacy policy that was archived on 2016-11-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161109085806id_/http%3A//www.rssportscars.com/site/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rssportscars.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606001837id_/http%3A//www.rssportscars.com/site/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html lang="en"><head>
     <title>Privacy Policy - RSsportscars.com</title>
@@ -57,22 +57,25 @@
 </li><li>            <a href="/makes/citroen/" onclick="return ResetSortType();">Citroen</a>
 </li><li>            <a href="/makes/dodge/" onclick="return ResetSortType();">Dodge</a>
 </li><li>            <a href="/makes/donkervoort/" onclick="return ResetSortType();">Donkervoort</a>
-</li></ul></li><li class="dir">&nbsp;<ul><li>            <a href="/makes/ferrari/" onclick="return ResetSortType();">Ferrari</a>
-</li><li>            <a href="/makes/fiat/" onclick="return ResetSortType();">Fiat</a>
+</li><li>            <a href="/makes/ferrari/" onclick="return ResetSortType();">Ferrari</a>
+</li></ul></li><li class="dir">&nbsp;<ul><li>            <a href="/makes/fiat/" onclick="return ResetSortType();">Fiat</a>
 </li><li>            <a href="/makes/ford/" onclick="return ResetSortType();">Ford</a>
 </li><li>            <a href="/makes/honda/" onclick="return ResetSortType();">Honda</a>
 </li><li>            <a href="/makes/hyundai/" onclick="return ResetSortType();">Hyundai</a>
 </li><li>            <a href="/makes/infiniti/" onclick="return ResetSortType();">Infiniti</a>
+</li><li>            <a href="/makes/italdesign/" onclick="return ResetSortType();">Italdesign</a>
 </li><li>            <a href="/makes/jaguar/" onclick="return ResetSortType();">Jaguar</a>
 </li><li>            <a href="/makes/jeep/" onclick="return ResetSortType();">Jeep</a>
 </li><li>            <a href="/makes/ken-okuyama/" onclick="return ResetSortType();">Ken Okuyama</a>
 </li><li>            <a href="/makes/kia/" onclick="return ResetSortType();">Kia</a>
 </li><li>            <a href="/makes/koenigsegg/" onclick="return ResetSortType();">Koenigsegg</a>
+</li><li>            <a href="/makes/lada/" onclick="return ResetSortType();">Lada</a>
 </li><li>            <a href="/makes/lamborghini/" onclick="return ResetSortType();">Lamborghini</a>
 </li><li>            <a href="/makes/land-rover/" onclick="return ResetSortType();">Land Rover</a>
 </li><li>            <a href="/makes/lexus/" onclick="return ResetSortType();">Lexus</a>
 </li><li>            <a href="/makes/lotus/" onclick="return ResetSortType();">Lotus</a>
-</li></ul></li><li class="dir">&nbsp;<ul><li>            <a href="/makes/lykan-hypersport/" onclick="return ResetSortType();">Lykan Hypersport</a>
+</li></ul></li><li class="dir">&nbsp;<ul><li>            <a href="/makes/lucid-motors/" onclick="return ResetSortType();">Lucid Motors</a>
+</li><li>            <a href="/makes/lykan-hypersport/" onclick="return ResetSortType();">Lykan Hypersport</a>
 </li><li>            <a href="/makes/maserati/" onclick="return ResetSortType();">Maserati</a>
 </li><li>            <a href="/makes/mazda/" onclick="return ResetSortType();">Mazda</a>
 </li><li>            <a href="/makes/mclaren/" onclick="return ResetSortType();">McLaren</a>
@@ -358,127 +361,132 @@
         <!-- live -->
         <div class="RightUpdContainer">
             <div class="RightUpdPhoto">
-                <a href="/news/mercedes-benz-e-class">
-                    <img alt="MERCEDES-BENZ REVEALS MOST POWERFUL E-CLASS" src="/photos/news/MERCEDES-BENZ-E-CLASS/MERCEDES-BENZ-ECLASS2-t.jpg">
+                <a href="/news/2018-bmw-2-series">
+                    <img alt="2018 BMW 2 SERIES: 3’S A CROWD" src="/photos/news/2018-bmw-2-series/2018-bmw-2-series-10-t.jpg">
                 </a>
             </div>
             <div class="RightUpdText">
-                <a href="/news/mercedes-benz-e-class">
-                    MERCEDES-BENZ REVEALS MOST POWERFUL E-CLASS
+                <a href="/news/2018-bmw-2-series">
+                    2018 BMW 2 SERIES: 3’S A CROWD
                     <span class="Link"></span>
                 </a>
                 <br>
-                <span class="RightUpdDate">Sat Nov 05, 2016</span>
+                <span class="RightUpdDate">Wed May 24, 2017</span>
             </div>
         </div>
         <div class="RightUpdContainer">
             <div class="RightUpdPhoto">
-                <a href="/news/mercedes-electric-car">
-                    <img alt="Mercedes Confirms Electric Car Lineup For The Next Decade" src="/photos/news/mercedes-electric-car/mercedes-electric-car10-t.jpg">
-                </a>
-            </div>
-            <div class="RightUpdText">
-                <a href="/news/mercedes-electric-car">
-                    Mercedes Confirms Electric Car Lineup For The Next Decade
-                    <span class="Link"></span>
-                </a>
-                <br>
-                <span class="RightUpdDate">Sun Oct 30, 2016</span>
-            </div>
-        </div>
-        <div class="RightUpdContainer">
-            <div class="RightUpdPhoto">
-                <a href="/news/vorsteiner-mclaren-570-vx">
-                    <img alt="Vorsteiner's McLaren 570-VX Wants To Be A Baby P1 GTR" src="/photos/news/vorsteiner-mcLaren-570-VX/vorsteiner-mcLaren-570-VX2-t.jpg">
-                </a>
-            </div>
-            <div class="RightUpdText">
-                <a href="/news/vorsteiner-mclaren-570-vx">
-                    Vorsteiner's McLaren 570-VX Wants To Be A Baby P1 GTR
-                    <span class="Link"></span>
-                </a>
-                <br>
-                <span class="RightUpdDate">Fri Oct 28, 2016</span>
-            </div>
-        </div>
-        <div class="RightUpdContainer">
-            <div class="RightUpdPhoto">
-                <a href="/videos/m-benz-g550">
-                    <img alt="Mercedes-Benz Wants You To Go Exploring With The New G550 4X4²" src="/photos/videos/m-benz-g550/m-benz-g550-t.jpg">
+                <a href="/videos/honda-s600">
+                    <img alt="Tiny Honda S600 Has A Gigantic Turbo And 1,200HP" src="/photos/videos/honda-s600/honda-s600-t.jpg">
                 </a>
                 <div class="RightUpdPlay">
-                    <a href="/videos/m-benz-g550">
+                    <a href="/videos/honda-s600">
                         <img alt="" src="/content/images/play.png">
                     </a>
                 </div>
             </div>
             <div class="RightUpdText">
-                <a href="/videos/m-benz-g550">
-                    Mercedes-Benz Wants You To Go Exploring With The New G550 4X4²
+                <a href="/videos/honda-s600">
+                    Tiny Honda S600 Has A Gigantic Turbo And 1,200HP
                     <span class="Link"></span>
                 </a>
                 <br>
-                <span class="RightUpdDate">Fri Oct 28, 2016</span>
+                <span class="RightUpdDate">Tue May 23, 2017</span>
             </div>
         </div>
         <div class="RightUpdContainer">
             <div class="RightUpdPhoto">
-                <a href="/news/mclaren-p1-gtr">
-                    <img alt="Five reasons you need this McLaren P1 GTR" src="/photos/news/mcLaren-p1-gtr/McLaren P1 GTR2-t.jpg">
+                <a href="/news/bentley-continental24">
+                    <img alt="New Continental 24 Limited Edition Celebrates Bentley's Return To The Nurburgring 24h" src="/photos/videos/bentley-continental24/bentley-continental24-10-t.jpg">
                 </a>
             </div>
             <div class="RightUpdText">
-                <a href="/news/mclaren-p1-gtr">
-                    Five reasons you need this McLaren P1 GTR
+                <a href="/news/bentley-continental24">
+                    New Continental 24 Limited Edition Celebrates Bentley's Return To The Nurburgring 24h
                     <span class="Link"></span>
                 </a>
                 <br>
-                <span class="RightUpdDate">Thu Oct 20, 2016</span>
+                <span class="RightUpdDate">Tue May 23, 2017</span>
             </div>
         </div>
         <div class="RightUpdContainer">
             <div class="RightUpdPhoto">
-                <a href="/news/bmw-m4-gts-2016">
-                    <img alt="BMW celebrates 2016 DTM title with striped M4 GTS" src="/photos/news/bmw-m4-gts-2016/bmw-m4-gts-2016-2-t.jpg">
+                <a href="/videos/2018-audi-sq5">
+                    <img alt="Sporty 2018 Audi SQ5 Has All The Premium SUV Bases Covered" src="/photos/videos/2018-audi-sq5/2018-audi-sq5-t.jpg">
                 </a>
+                <div class="RightUpdPlay">
+                    <a href="/videos/2018-audi-sq5">
+                        <img alt="" src="/content/images/play.png">
+                    </a>
+                </div>
             </div>
             <div class="RightUpdText">
-                <a href="/news/bmw-m4-gts-2016">
-                    BMW celebrates 2016 DTM title with striped M4 GTS
+                <a href="/videos/2018-audi-sq5">
+                    Sporty 2018 Audi SQ5 Has All The Premium SUV Bases Covered
                     <span class="Link"></span>
                 </a>
                 <br>
-                <span class="RightUpdDate">Wed Oct 19, 2016</span>
+                <span class="RightUpdDate">Tue May 23, 2017</span>
             </div>
         </div>
         <div class="RightUpdContainer">
             <div class="RightUpdPhoto">
-                <a href="/news/tesla-model-3-sold">
-                    <img alt="The Tesla Model 3's first year of production has already sold out" src="/photos/news/tesla-model-3-sold/Tesla Model 32-t.jpg">
+                <a href="/news/audi-uk-a4-2018">
+                    <img alt="Audi UK Adds More Kit And A New Black Edition To The 2018 A4" src="/photos/news/audi-uk-a4-2018/audi-uk-a4-2018-2-t.jpg">
                 </a>
             </div>
             <div class="RightUpdText">
-                <a href="/news/tesla-model-3-sold">
-                    The Tesla Model 3's first year of production has already sold out
+                <a href="/news/audi-uk-a4-2018">
+                    Audi UK Adds More Kit And A New Black Edition To The 2018 A4
                     <span class="Link"></span>
                 </a>
                 <br>
-                <span class="RightUpdDate">Wed Oct 19, 2016</span>
+                <span class="RightUpdDate">Tue May 23, 2017</span>
             </div>
         </div>
         <div class="RightUpdContainer">
             <div class="RightUpdPhoto">
-                <a href="/news/alfa-romeo-new-giulia">
-                    <img alt="Alfa Romeo UK Opens Order Books For New Giulia" src="/photos/news/alfa-romeo-new-giulia/alfa-romeo-new-giulia2-t.jpg">
+                <a href="/news/spyker-c8">
+                    <img alt="Spyker C8 Preliator Spyder" src="/photos/news/spyker-c8/spyker-c8-10-t.jpg">
                 </a>
             </div>
             <div class="RightUpdText">
-                <a href="/news/alfa-romeo-new-giulia">
-                    Alfa Romeo UK Opens Order Books For New Giulia
+                <a href="/news/spyker-c8">
+                    Spyker C8 Preliator Spyder
                     <span class="Link"></span>
                 </a>
                 <br>
-                <span class="RightUpdDate">Wed Oct 19, 2016</span>
+                <span class="RightUpdDate">Sat May 20, 2017</span>
+            </div>
+        </div>
+        <div class="RightUpdContainer">
+            <div class="RightUpdPhoto">
+                <a href="/news/audi-r8-lms-gt4">
+                    <img alt="Audi’s R8 LMS GT4 Racer Gives Customers a Sporting Chance at the Checkered Flag" src="/photos/news/audi-r8-lms-gt4/audi-r8-lms-gt4-3-t.jpg">
+                </a>
+            </div>
+            <div class="RightUpdText">
+                <a href="/news/audi-r8-lms-gt4">
+                    Audi’s R8 LMS GT4 Racer Gives Customers a Sporting Chance at the Checkered Flag
+                    <span class="Link"></span>
+                </a>
+                <br>
+                <span class="RightUpdDate">Thu Apr 27, 2017</span>
+            </div>
+        </div>
+        <div class="RightUpdContainer">
+            <div class="RightUpdPhoto">
+                <a href="/news/renault-trezor-concept">
+                    <img alt="The Renault Trezor" src="/photos/news/renault-trezor-concept/renault-trezor-concept2-t.jpg">
+                </a>
+            </div>
+            <div class="RightUpdText">
+                <a href="/news/renault-trezor-concept">
+                    The Renault Trezor
+                    <span class="Link"></span>
+                </a>
+                <br>
+                <span class="RightUpdDate">Thu Apr 27, 2017</span>
             </div>
         </div>
 
@@ -501,12 +509,12 @@
 
     <div class="RightHeading FontWhite"><a href="/potd/">Photo of the Day</a></div>
     <div id="RightPOTD1">
-        <a href="/potd/dtm-bmw-m4-gts-safety-car" title="DTM's BMW M4 GTS safety car">
-            <img src="/photos/potd/DTM-BMW-M4-GTS-Safety-Car/dtm-bmw-m4-gts-safety-car-hn.jpg" alt="DTM's BMW M4 GTS safety car" class="HoverOpacity"></a>
+        <a href="/potd/mclaren-570s-gt4" title="MCLAREN 570S GT4">
+            <img src="/photos/potd/mclaren-570s-gt4/mclaren_570s_gt4-hn.jpg" alt="MCLAREN 570S GT4" class="HoverOpacity"></a>
     </div>
     <div id="RightPOTD2" class="FontWhiteS">
-        <span class="Font12pt"><a href="/potd/dtm-bmw-m4-gts-safety-car">DTM's BMW M4 GTS safety car</a></span><br>
-        <span class="Font9pt">October 19, 2016 // By: NA</span>
+        <span class="Font12pt"><a href="/potd/mclaren-570s-gt4">MCLAREN 570S GT4</a></span><br>
+        <span class="Font9pt">May 24, 2017 // By: na</span>
     </div>
 
 
@@ -614,7 +622,7 @@
     </div>
     <div class="FooterToTop FontWhiteS"><a href="#top">↑ Go Back to Top / Hide Navigation</a></div>
     <div id="FooterCopyright">
-        © 2013-2016 RSsportscars.com. All rights reserved. All registered trademarks are the property of their respective owners.
+        © 2013-2017 RSsportscars.com. All rights reserved. All registered trademarks are the property of their respective owners.
     </div>
 </div>
 
