--- a/b/bi/bil/billiondigital.com.html
+++ b/b/bi/bil/billiondigital.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the billiondigital.com privacy policy that was archived on 2016-10-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161017061029id_/http%3A//billiondigital.com/Privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the billiondigital.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606002058id_/http%3A//billiondigital.com/Privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 
@@ -57,7 +57,7 @@
                 
 <div class="container wiki-text"><h3>Privacy Policy </h3>
 <h5><b>Overview</b></h5>
-This Privacy Policy introduces to your our policies and procedures regarding the collection, use and disclosure of personal information we receive from users of the BillionDigital websites (included but not limited to <a href="http://billiondigital.com">billiondigital.com</a>, <a href="http://themler.com">themler.com</a>, <a href="http://billionphotos.com">billionphotos.com</a>, <a href="http://billionthemes.com">billionthemes.com</a> and <a href="http://answers.themler.com">answers.themler.com</a> to be hereinafter referred to as the "Website"). By using the Website you consent to the collection, use and disclosure of your personal information in accordance with this Policy. If you have questions or concerns regarding this policy, you should first contact <a href="http://answers.themler.com/Topic/Create?term=%5Blicense%5D&amp;private=1">BillionDigital Support</a>.<br>
+This Privacy Policy introduces to your our policies and procedures regarding the collection, use and disclosure of personal information we receive from users of the BillionDigital websites (included but not limited to <a href="http://billiondigital.com">billiondigital.com</a>, <a href="http://themler.com">themler.com</a>, <a href="http://billionphotos.com">billionphotos.com</a>, <a href="http://templates.themler.com">templates.themler.com</a> and <a href="http://answers.themler.com">answers.themler.com</a> to be hereinafter referred to as the "Website"). By using the Website you consent to the collection, use and disclosure of your personal information in accordance with this Policy. If you have questions or concerns regarding this policy, you should first contact <a href="http://answers.themler.com/Topic/Create?term=%5Blicense%5D&amp;private=1">BillionDigital Support</a>.<br>
 <h5><b>Users</b></h5>
 This Site is not directed to children under 18. We do not intentionally gather Personal Information about visitors who are under the age of 13. In case that we learn that we have collected personal information from a child under age 13 without verification of parental consent, we will delete that information as quickly as possible. If you believe that we might have any information from or about a child under 13, please contact <a href="http://answers.themler.com/Topic/Create?term=%5Blicense%5D&amp;private=1">BillionDigital Support</a>.<br>
 <h5><b>Collected Information</b></h5>
@@ -115,7 +115,7 @@ We reserve the right to change this Policy from time to time, and at our sole di
 <li><a href="/Privacy">Privacy Policy</a></li>
 <li>|</li>
 <li><a href="/Agreement">License Agreement</a></li></ul>
-            © 2016 BillionDigital.com
+            © 2017 BillionDigital.com
         </div>
     </div>
     <!-- -->
