simpleroptions.com (archived on 2017-06-06)
{
  "alexa_rank": 150833,
  "analysis_subcorpus": true,
  "categories": "business;economyandfinance",
  "char_count": 2405,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.91,
  "homepage_snapshot_redirected_domain": "simpleroptions.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170426062225id_/http://www.simpleroptions.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170426062225id_/http%3A//simpleroptions.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "simpleroptions.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606002206id_/http%3A//www.simpleroptions.com/public/department12.cfm",
  "policy_title": "Our Privacy Policy",
  "policy_url": "simpleroptions.com/public/department12.cfm",
  "sha1": "b82a30011dc8b1e18781a9fd1eef36aceddf11a0",
  "simhash": 14807194830774465825,
  "simhash_updated": false,
  "site_hostname": "simpleroptions.com",
  "site_url": "http://simpleroptions.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170606002206",
  "word_count": 381,
  "year": 2017
}

--- a/s/si/sim/simpleroptions.com.html
+++ b/s/si/sim/simpleroptions.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the simpleroptions.com privacy policy that was archived on 2016-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161214053542id_/http%3A//www.simpleroptions.com/public/department12.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the simpleroptions.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606002206id_/http%3A//www.simpleroptions.com/public/department12.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml" style="" class="js no-touch history boxshadow csstransforms3d csstransitions video svg webkit chrome linux js sticky-header-enabled sticky-header-negative"><!-- Powered by MemberGate http://www.membergate.com --><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -75,6 +75,7 @@
 	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 	})(window,document,'script','dataLayer','GTM-MP4WW5');</script>
 	<!-- End Google Tag Manager -->
+
 <title>Our Privacy Policy</title>
 		<meta name="Description" content="Our Privacy Policy">
 		<meta name="Keywords" content="option trading, options trading, learn to trade options, options trading strategies, option trading strategy, options trading tips, stock options trading, options trading webinar, options trading newsletter, understanding options trading, explain options trading">
@@ -240,7 +241,6 @@
 				<div class="col-md-4">
 					<h5>Partner Platforms</h5>
 					<div class="platform-links">
-						<a href="http://goo.gl/1yNkvX"><img src="/assets/images/footer-dough.png" alt=""></a>
 						<a href="https://www.tdameritrade.com/o.cgi?a=OZN&amp;o=220&amp;p=%2Fservice%2Fwhy-td-ameritrade.page"><img src="/assets/images/footer-tradestation-logo.png" alt=""></a>
 						</div>
 					</div>
@@ -252,12 +252,14 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3">
-				<p>	© Copyright 2011-2016 <a href="/" style="color:#fff;">Simpler Options</a>. <br>All Rights Reserved. Reproduction without permission prohibited.</p>
+				<p>	© Copyright 2011-2017 <a href="/" style="color:#fff;">Simpler Options</a>. <br>All Rights Reserved. Reproduction without permission prohibited.</p>
 				<p>TD Ameritrade, Inc. and SimplerOptions are separate, unaffiliated companies and are not responsible for each other's services and products.</p>
 				</div>
 				<div class="col-md-9">
 				<p>U.S. Government Required Disclaimer - Commodity Futures Trading Commission. Futures and options trading has large potential rewards, but also large potential risk. You must be aware of the risks and be willing to accept them in order to invest in the futures and options markets. Don't trade with money you can't afford to lose. This website is neither a solicitation nor an offer to Buy/Sell futures or options. No representation is being made that any account will or is likely to achieve profits or losses similar to those discussed on this website. The past performance of any trading system or methodology is not necessarily indicative of future results.</p>
 				<p>CFTC RULE 4.41 - HYPOTHETICAL OR SIMULATED PERFORMANCE RESULTS HAVE CERTAIN LIMITATIONS. UNLIKE AN ACTUAL PERFORMANCE RECORD, SIMULATED RESULTS DO NOT REPRESENT ACTUAL TRADING. ALSO, SINCE THE TRADES HAVE NOT BEEN EXECUTED, THE RESULTS MAY HAVE UNDER-OR-OVER COMPENSATED FOR THE IMPACT, IF ANY, OF CERTAIN MARKET FACTORS, SUCH AS LACK OF LIQUIDITY, SIMULATED TRADING PROGRAMS IN GENERAL ARE ALSO SUBJECT TO THE FACT THAT THEY ARE DESIGNED WITH THE BENEFIT OF HINDSIGHT. NO REPRESENTATION IS BEING MADE THAT ANY ACCOUNT WILL OR IS LIKELY TO ACHIEVE PROFIT OR LOSSES SIMILAR TO THOSE SHOWN.</p>
+			<p>tastyworks, Inc. ("tastyworks") has entered into a Marketing Agreement with Simpler Trading ("Marketing Agent") whereby tastyworks pays compensation to Simpler Trading to recommend tastyworks' brokerage services. The existence of this Marketing Agreement should not be deemed as an endorsement or recommendation of Simpler Trading by tastyworks and/or any of its affiliated companies. Neither tastyworks nor any of its affiliated companies is responsible for the privacy practices of Simpler Trading or this website. tastyworks does not warrant the accuracy or content of the products or services offered by Simpler Trading or this website.</p>
+			<p>Options are not suitable for all investors as the special risks inherent to options trading my expose investors to potentially rapid and substantial losses. Options trading in a tastyworks account is subject to tastyworksâ?? review and approval. Please read <a href="https://www.theocc.com/components/docs/riskstoc.pdf" target="_blank">Characteristics and Risks of Standardized Options</a> before investing in options.</p>
 				</div>
 			</div>
 			<p style="float:right;"></p>
@@ -281,4 +283,4 @@
 		
 	
 
-</div><a class="scroll-to-top hidden-mobile" href="#"><i class="fa fa-chevron-up"></i></a><div id="sb-container"><div id="sb-overlay"></div><div id="sb-wrapper"><div id="sb-title"><div id="sb-title-inner"></div></div><div id="sb-wrapper-inner"><div id="sb-body"><div id="sb-body-inner"></div><div id="sb-loading"><div id="sb-loading-inner"><span>loading</span></div></div></div></div><div id="sb-info"><div id="sb-info-inner"><div id="sb-counter"></div><div id="sb-nav"><a id="sb-nav-close" title="Close" onclick="Shadowbox.close()"></a><a id="sb-nav-next" title="Next" onclick="Shadowbox.next()"></a><a id="sb-nav-play" title="Play" onclick="Shadowbox.play()"></a><a id="sb-nav-pause" title="Pause" onclick="Shadowbox.pause()"></a><a id="sb-nav-previous" title="Previous" onclick="Shadowbox.previous()"></a></div></div></div></div></div><div style="position: absolute; z-index: -10000; top: 0px; left: 0px; right: 0px; height: 1635px;"></div><div style="clear: both;"></div></body></html>
+</div><a class="scroll-to-top hidden-mobile" href="#"><i class="fa fa-chevron-up"></i></a><div id="sb-container"><div id="sb-overlay"></div><div id="sb-wrapper"><div id="sb-title"><div id="sb-title-inner"></div></div><div id="sb-wrapper-inner"><div id="sb-body"><div id="sb-body-inner"></div><div id="sb-loading"><div id="sb-loading-inner"><span>loading</span></div></div></div></div><div id="sb-info"><div id="sb-info-inner"><div id="sb-counter"></div><div id="sb-nav"><a id="sb-nav-close" title="Close" onclick="Shadowbox.close()"></a><a id="sb-nav-next" title="Next" onclick="Shadowbox.next()"></a><a id="sb-nav-play" title="Play" onclick="Shadowbox.play()"></a><a id="sb-nav-pause" title="Pause" onclick="Shadowbox.pause()"></a><a id="sb-nav-previous" title="Previous" onclick="Shadowbox.previous()"></a></div></div></div></div></div><div style="position: absolute; z-index: -10000; top: 0px; left: 0px; right: 0px; height: 1747px;"></div><div style="clear: both;"></div></body></html>
