--- a/k/kp/kpc/kpcb.com.html
+++ b/k/kp/kpc/kpcb.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kpcb.com privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119002045id_/http%3A//www.kpcb.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kpcb.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606002601id_/http%3A//www.kpcb.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"><head>
   <!-- Designed and built by http://squaremill.com -->
@@ -7,8 +7,6 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- <preference name="KeyboardShrinksView" value="false"> -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<script src="https://js-agent.newrelic.com/nr-998.min.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","errorBeacon":"bam.nr-data.net","licenseKey":"fcb4de3912","applicationID":"4922633","transactionName":"IFpZTEZbCV1SFkxAEgJBXltrRARWUhdMQxQKQ1ZbTWsVXlsNAEo=","queueTime":1,"applicationTime":18,"agentToken":null,"agent":""}</script>
-<script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,t,n){function r(n){if(!t[n]){var o=t[n]={exports:{}};e[n][0].call(o.exports,function(t){var o=e[n][1][t];return r(o||t)},o,o.exports)}return t[n].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<n.length;o++)r(n[o]);return r}({1:[function(e,t,n){function r(){}function o(e,t,n){return function(){return i(e,[(new Date).getTime()].concat(u(arguments)),t?null:this,n),t?void 0:this}}var i=e("handle"),a=e(2),u=e(3),c=e("ee").get("tracer"),f=NREUM;"undefined"==typeof window.newrelic&&(newrelic=f);var s=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit"],l="api-",p=l+"ixn-";a(s,function(e,t){f[t]=o(l+t,!0,"api")}),f.addPageAction=o(l+"addPageAction",!0),f.setCurrentRouteName=o(l+"routeName",!0),t.exports=newrelic,f.interaction=function(){return(new r).get()};var d=r.prototype={createTracer:function(e,t){var n={},r=this,o="function"==typeof t;return i(p+"tracer",[Date.now(),e,n],r),function(){if(c.emit((o?"":"no-")+"fn-start",[Date.now(),r,o],n),o)try{return t.apply(this,arguments)}finally{c.emit("fn-end",[Date.now()],n)}}}};a("setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,t){d[t]=o(p+t)}),newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),i("err",[e,(new Date).getTime()])}},{}],2:[function(e,t,n){function r(e,t){var n=[],r="",i=0;for(r in e)o.call(e,r)&&(n[i]=t(r,e[r]),i+=1);return n}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],3:[function(e,t,n){function r(e,t,n){t||(t=0),"undefined"==typeof n&&(n=e?e.length:0);for(var r=-1,o=n-t||0,i=Array(o<0?0:o);++r<o;)i[r]=e[t+r];return i}t.exports=r},{}],ee:[function(e,t,n){function r(){}function o(e){function t(e){return e&&e instanceof r?e:e?c(e,u,i):i()}function n(n,r,o){if(!p.aborted){e&&e(n,r,o);for(var i=t(o),a=v(n),u=a.length,c=0;c<u;c++)a[c].apply(i,r);var f=s[w[n]];return f&&f.push([y,n,r,i]),i}}function d(e,t){b[e]=v(e).concat(t)}function v(e){return b[e]||[]}function g(e){return l[e]=l[e]||o(n)}function m(e,t){f(e,function(e,n){t=t||"feature",w[n]=t,t in s||(s[t]=[])})}var b={},w={},y={on:d,emit:n,get:g,listeners:v,context:t,buffer:m,abort:a,aborted:!1};return y}function i(){return new r}function a(){(s.api||s.feature)&&(p.aborted=!0,s=p.backlog={})}var u="nr@context",c=e("gos"),f=e(2),s={},l={},p=t.exports=o();p.backlog=s},{}],gos:[function(e,t,n){function r(e,t,n){if(o.call(e,t))return e[t];var r=n();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,t,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[t]=r,r}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],handle:[function(e,t,n){function r(e,t,n,r){o.buffer([e],r),o.emit(e,t,n)}var o=e("ee").get("handle");t.exports=r,r.ee=o},{}],id:[function(e,t,n){function r(e){var t=typeof e;return!e||"object"!==t&&"function"!==t?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");t.exports=r},{}],loader:[function(e,t,n){function r(){if(!h++){var e=y.info=NREUM.info,t=l.getElementsByTagName("script")[0];if(setTimeout(f.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&t))return f.abort();c(b,function(t,n){e[t]||(e[t]=n)}),u("mark",["onload",a()],null,"api");var n=l.createElement("script");n.src="https://"+e.agent,t.parentNode.insertBefore(n,t)}}function o(){"complete"===l.readyState&&i()}function i(){u("mark",["domContent",a()],null,"api")}function a(){return(new Date).getTime()}var u=e("handle"),c=e(2),f=e("ee"),s=window,l=s.document,p="addEventListener",d="attachEvent",v=s.XMLHttpRequest,g=v&&v.prototype;NREUM.o={ST:setTimeout,CT:clearTimeout,XHR:v,REQ:s.Request,EV:s.Event,PR:s.Promise,MO:s.MutationObserver},e(1);var m=""+location,b={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-998.min.js"},w=v&&g&&g[p]&&!/CriOS/.test(navigator.userAgent),y=t.exports={offset:a(),origin:m,features:{},xhrWrappable:w};l[p]?(l[p]("DOMContentLoaded",i,!1),s[p]("load",r,!1)):(l[d]("onreadystatechange",o),s[d]("onload",r)),u("mark",["firstbyte",a()],null,"api");var h=0},{}]},{},["loader"]);</script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="purple">
@@ -16,7 +14,7 @@
     Privacy Policy — Kleiner Perkins Caufield Byers
 </title>
 <meta content="authenticity_token" name="csrf-param">
-<meta content="hsLsIt+rMDxyhdlP0BxHK++ud28TXHIr8OVr86U1qEM=" name="csrf-token">
+<meta content="8SeoyPnAOQYJQSKr8N5n4jH4bjkyxEo4gvGONUGm5Zw=" name="csrf-token">
 <meta name="description" content="Privacy Policy">
 
 <meta name="author" content="Kleiner Perkins Caufield Byers www.kpcb.com">
@@ -27,8 +25,8 @@
   <link href="/assets/favicons/ios-4df55bfd2755128f74d528236502e3ee.png" rel="apple-touch-precomposed" sizes="144x144" type="image/vnd.microsoft.icon">
 <link href="/assets/favicons/favicon-2106b3aed5e7073aa2eb6d385cc1eeaf.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
 
-  <link href="/assets/mn_application-c05cbf60cc257a6ece0c7dbc27735c5c.css" media="all" rel="stylesheet">
-    <script src="https://use.typekit.net/ojq1ntq.js"></script>
+  <link href="/assets/mn_application-938d1cfb7932db011b2a8623a6af9fd8.css" media="all" rel="stylesheet">
+    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="https://use.typekit.net/ojq1ntq.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
   <script type="text/javascript">
@@ -46,7 +44,7 @@
 </script>
 
   
-<meta class="foundation-data-attribute-namespace"><meta class="foundation-mq-xxlarge"><meta class="foundation-mq-xlarge"><meta class="foundation-mq-large"><meta class="foundation-mq-medium"><meta class="foundation-mq-small"><style></style><meta class="foundation-mq-topbar"></head>
+<meta class="foundation-data-attribute-namespace"><meta class="foundation-mq-xxlarge"><meta class="foundation-mq-xlarge"><meta class="foundation-mq-large"><meta class="foundation-mq-medium"><meta class="foundation-mq-small"><style></style></head>
 <body id="static_pages" class="">
   <!--[if lt IE 9]>
 <div class="deprecated-browser-notice">
@@ -66,7 +64,7 @@
       <li class="name">
         <h1>
           <a class="logo dropdown-trigger" href="http://www.kpcb.com/">
-            <img alt="Logo header@2x" class="white-logo" height="32" src="/assets/global/logo-header@2x-9c6d8c1b4ff5bc3ff6d24717b3b15f1e.png" width="64">
+            <img alt="Kleiner perkins logo header" class="white-logo" height="46" src="/assets/global/kleiner-perkins-logo-header-2976c7bd454792686796530164ecb002.png" width="80">
             <i class="kpcb kpcb-caret-down"></i>
 </a>        </h1>
       </li>
@@ -80,8 +78,7 @@
       </li>
 
     </ul>
-    
-  <section class="top-bar-section">
+    <section class="top-bar-section">
 
         <div class="right cta-container">
           <a href="#" class="button" data-reveal-id="newsletter-signup-modal">Stay In Touch</a>
@@ -92,7 +89,6 @@
         <li><a href="/teams">Team</a></li>
         <li><a href="/careers">Careers</a></li>
         <li><a href="/companies">Companies</a></li>
-        <li><a href="/design">Design</a></li>
         <li><a href="/internet-trends">Internet Trends <i class="kpcb kpcb-angle-right"></i></a></li>
         <li class="hr show-for-small-only"></li>
         <li class="show-for-small-only">
@@ -102,7 +98,8 @@
           <a href="http://kpcbedge.com" target="_blank" title="Visit KPCB Edge">KPCB Edge</a>
         </li>
       </ul>
-    </section></nav>
+    </section>
+  </nav>
 </header>
 
   <main class="global-main-content" role="main">
