tradewins.com (archived on 2017-06-06)
{
  "alexa_rank": 193342,
  "analysis_subcorpus": true,
  "categories": "business;entertainment",
  "char_count": 7741,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 16.54,
  "homepage_snapshot_redirected_domain": "tradewins.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170408213301id_/https://www.tradewins.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170408213301id_/http%3A//tradewins.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "tradewins.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606002845id_/http%3A//www.tradewins.com/privacy-policy-1",
  "policy_title": "Privacy Policy",
  "policy_url": "tradewins.com/privacy-policy-1",
  "sha1": "9af30ceb16b894f5fb0b07f45a75c4d663e1e347",
  "simhash": 4919674782723240268,
  "simhash_updated": false,
  "site_hostname": "tradewins.com",
  "site_url": "http://tradewins.com",
  "smog": 19.02,
  "strict_updated": true,
  "timestamp": "20170606002845",
  "word_count": 1164,
  "year": 2017
}

--- a/t/tr/tra/tradewins.com.html
+++ b/t/tr/tra/tradewins.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tradewins.com privacy policy that was archived on 2016-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161219053616id_/http%3A//www.tradewins.com/privacy-policy-1) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tradewins.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606002845id_/http%3A//www.tradewins.com/privacy-policy-1) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml" xml:lang="en" lang="en"><head>
 <title>Privacy Policy</title>
@@ -11,7 +11,7 @@ var site_base_url = "http://www.tradewins.com/";
 var site_dinamic_url = "http://www.tradewins.com/index.php?";
 var global_https_url = "https://www.tradewins.com";
 var site_admin_url = "https://www.tradewins.com";
-var site_ajax_url = "http://www.tradewins.com/index.php?pcsid=9e2eaa5f8fba25da8fcc230d89b84aab";
+var site_ajax_url = "http://www.tradewins.com/index.php?pcsid=94acb403318505b5d47cfc5f41c487e6";
 var site_ajax_url_admin = "http://www.tradewins.com";
 var skin_images = "content/cache/skins/TradeWins/images/";
 var skin_themes = "content/cache/skins/TradeWins/styles/";
@@ -259,9 +259,6 @@ zIndexNumber -= 10;
                         <a href="http://www.tradewins.com/art-palmer/" class=" "><span>Art Palmer</span></a>
                                         </li>
                                         <li>
-                        <a href="http://www.tradewins.com/brian-schad/" class=" "><span>Brian Schad</span></a>
-                                        </li>
-                                        <li>
                         <a href="http://www.tradewins.com/bubba-horwitz/" class=" "><span>Bubba Horwitz</span></a>
                                         </li>
                                         <li>
@@ -355,6 +352,9 @@ zIndexNumber -= 10;
                         <a href="http://www.tradewins.com/market-publications/" class=" "><span>Market Publications</span></a>
                                         </li>
                                         <li>
+                        <a href="http://www.tradewins.com/mike-batty/" class=" "><span>Mike Batty</span></a>
+                                        </li>
+                                        <li>
                         <a href="http://www.tradewins.com/mohan/" class=" "><span>Mohan</span></a>
                                         </li>
                                         <li>
@@ -368,6 +368,9 @@ zIndexNumber -= 10;
                                         </li>
                                         <li>
                         <a href="http://www.tradewins.com/ray-frazier/" class=" "><span>Ray Frazier</span></a>
+                                        </li>
+                                        <li>
+                        <a href="http://www.tradewins.com/rob-abels/" class=" "><span>Rob Abels</span></a>
                                         </li>
                                         <li>
                         <a href="http://www.tradewins.com/rob-roy/" class=" "><span>Rob Roy</span></a>
@@ -421,21 +424,6 @@ zIndexNumber -= 10;
                                                 <div class="panel_bottom"></div>
                         </div>
 <div id="right" class="layout-zone-right layout-zone ">
-<div class="panel-newsletters-subscribe panel clearfix ">
-<h4 class="title "><img src="content/cache/skins/TradeWins/images/inside_trading.png" alt="Inside Trading"></h4>
-<div class="content ">
-            <p>Sign-Up for our<br><span class="style2">Free Newsletter</span><br>“Inside Trading”</p>
-<form action="http://app.maropost.com/accounts/126/forms/243/subscribe/88bd1b544ebfd9de35e470409e01d495b646fae0" class="full_length_box" method="post">
-                    <input class="newsletter_input" maxlength="64" type="text" id="contact_fields_first_name" name="contact_fields[first_name]" value="first name" onfocus="this.value=''">
-                    <input class="newsletter_input" maxlength="64" type="text" id="contact_fields_last_name" name="contact_fields[last_name]" value="last name" onfocus="this.value=''">
-                    <input class="newsletter_input" maxlength="64" type="text" id="contact_fields_email" name="contact_fields[email]" value="email address" onfocus="this.value=''">
-                    <div class="gap-top text-center">
-                            <p class="smaller-text">Our e-newsletter is delivered every Wednesday, and our video newsletter is delivered every Thursday. You will also receive various promotions and free webinar announcements throughout the week.</p>
-                            <input type="image" src="content/cache/skins/TradeWins/images/button-subscribe.png" style="background-image: none;" class="button-subscribe submit-image " alt="Subscribe">
-                    </div>
-</form>
-</div>
-</div>                        <div class="panel_bottom"></div>
 <div class="panel-bbb panel clearfix ">
 <h4 class="title ">Proud Member of BBB</h4>
 <div class="content ">
@@ -453,6 +441,11 @@ zIndexNumber -= 10;
 <div class="page-text wrap ">
 <h1>Privacy Policy</h1>
 <div class="spacer clearfix">
+
+
+<title>Untitled Document</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+
 
 <p><font face="Arial, Helvetica, sans-serif" size="-1"><b>TradeWins Publishing 
   Privacy Policy </b></font></p>
@@ -499,8 +492,9 @@ zIndexNumber -= 10;
   <li><font face="Arial, Helvetica, sans-serif" size="-1">To improve our services; 
     </font></li>
   <li><font face="Arial, Helvetica, sans-serif" size="-1">To update and inform 
-    you about TradeWins Publishing services and products; <br>
-    </font></li>
+    you about TradeWins Publishing services and products; </font></li>
+  <li><font size="-1" face="Arial, Helvetica, sans-serif">To send you offers from third party advertisers which are relevant and similar to our own<br>
+  </font></li>
 </ul>
 <p><font face="Arial, Helvetica, sans-serif" size="-1">We provide Personal Information 
   to trusted business partners that work on behalf of or with TradeWins Publishing under confidentiality agreements. These companies may use your 
@@ -587,6 +581,7 @@ zIndexNumber -= 10;
   <br>
   </font></p>
 <p></p>
+
 
 </div>
 </div></div></div>
