--- a/i/ip/ipo/ipower.com.html
+++ b/i/ip/ipo/ipower.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ipower.com privacy policy that was archived on 2016-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161226234104id_/https%3A//www.ipower.com/legal/legal_privacy.bml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ipower.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606003102id_/http%3A//www.ipower.com/legal/legal_privacy.bml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html class="no-js"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -56,8 +56,6 @@ V.chat = {
 window.addEventListener('load', function() { V.chat.initialize() }, false);
 </script>
 
-
-
 <script src="/generalAppC/scriptcat/87ae207201c55b84c5270851159260e1.1"></script>
 
 
@@ -91,7 +89,8 @@ var monetateT = new Date().getTime();
 				.info_msg {width: 400px;}
 			</style>
 		</block>
-	<script src="/generalAppC/javascripts/dropdown-navigation.js"></script><style type="text/css">#menu1Container { visibility:hidden; left:0px; top:141px; overflow:hidden; z-index:10000; }#menu1Container, #menu1Content { position:absolute; width:150px; height:400px; clip:rect(0 150 400 0); }</style><style type="text/css">#menu2Container { visibility:hidden; left:0px; top:141px; overflow:hidden; z-index:10000; }#menu2Container, #menu2Content { position:absolute; width:150px; height:400px; clip:rect(0 150 400 0); }</style><style type="text/css">#menu3Container { visibility:hidden; left:0px; top:141px; overflow:hidden; z-index:10000; }#menu3Container, #menu3Content { position:absolute; width:150px; height:400px; clip:rect(0 150 400 0); }</style><style type="text/css">#menu4Container { visibility:hidden; left:0px; top:141px; overflow:hidden; z-index:10000; }#menu4Container, #menu4Content { position:absolute; width:150px; height:400px; clip:rect(0 150 400 0); }</style><style type="text/css">#menu5Container { visibility:hidden; left:0px; top:141px; overflow:hidden; z-index:10000; }#menu5Container, #menu5Content { position:absolute; width:150px; height:400px; clip:rect(0 150 400 0); }</style><style type="text/css">#menu6Container { visibility:hidden; left:0px; top:141px; overflow:hidden; z-index:10000; }#menu6Container, #menu6Content { position:absolute; width:150px; height:400px; clip:rect(0 150 400 0); }</style><script type="text/javascript">
+	<style>.browser-alert.hidden{display: none;}</style>
+<script src="/generalAppC/javascripts/dropdown-navigation.js"></script><style type="text/css">#menu1Container { visibility:hidden; left:0px; top:141px; overflow:hidden; z-index:10000; }#menu1Container, #menu1Content { position:absolute; width:150px; height:400px; clip:rect(0 150 400 0); }</style><style type="text/css">#menu2Container { visibility:hidden; left:0px; top:141px; overflow:hidden; z-index:10000; }#menu2Container, #menu2Content { position:absolute; width:150px; height:400px; clip:rect(0 150 400 0); }</style><style type="text/css">#menu3Container { visibility:hidden; left:0px; top:141px; overflow:hidden; z-index:10000; }#menu3Container, #menu3Content { position:absolute; width:150px; height:400px; clip:rect(0 150 400 0); }</style><style type="text/css">#menu4Container { visibility:hidden; left:0px; top:141px; overflow:hidden; z-index:10000; }#menu4Container, #menu4Content { position:absolute; width:150px; height:400px; clip:rect(0 150 400 0); }</style><style type="text/css">#menu5Container { visibility:hidden; left:0px; top:141px; overflow:hidden; z-index:10000; }#menu5Container, #menu5Content { position:absolute; width:150px; height:400px; clip:rect(0 150 400 0); }</style><style type="text/css">#menu6Container { visibility:hidden; left:0px; top:141px; overflow:hidden; z-index:10000; }#menu6Container, #menu6Content { position:absolute; width:150px; height:400px; clip:rect(0 150 400 0); }</style><script type="text/javascript">
 
 				  var _gaq = _gaq || [];
 
@@ -126,6 +125,26 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-PPRPX8');</script>
 
+<div class="browser-alert hidden">
+    <div class="alert" data-alert="alert">
+        <button type="button" class="close" data-dismiss="alert" onclick="browserAlert.hideMe()">x</button>
+        <p class="ie-browserhappy">
+            The browser version you are using is <strong>no longer supported</strong>. Please <a href="http://browsehappy.com/" target="_blank">upgrade</a> for the best site experience.
+        </p>
+    </div>
+</div>
+
+<script>
+  <!--
+	window.jQuery || document.write('<script src="/generalAppC/javascripts/jquery/jquery.min.js"><\/script>')
+  -->
+</script><script src="/generalAppC/javascripts/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="/generalAppC/javascripts/js.cookie.js"></script>
+<script type="text/javascript" src="/generalAppC/javascripts/ie-browser-alert.js"></script>
+
+
+
+
 <div id="doc2" class="yui-t2">
 <div id="control-panel-nav"><div id="cp">
 <div class="control-links"><ul>
@@ -133,17 +152,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <li><a class="cpbar-webmail icon" href="/secure/login.bml?showWebmailTab=1">WebMail</a></li>
 <li><a class="cpbar-file-manager icon" href="/controlpanel/FileManager/">FileManager</a></li>
 </ul></div>
-<div class="login-status login-form"><form method="post" enctype="application/x-www-form-urlencoded" action="https://secure.ipower.com/secureLogin"><input type="hidden" name="__token_timestamp__" value="1482795664"><input type="hidden" name="__token_val__" value="3f3be0a814373081b860191047cde396">
-<input type="hidden" name="destination" value="/controlpanel/"><ul>
-<li>
-<label>Username</label><input maxlength="50" size="15" name="credential_0" class="formfield">
-</li>
-<li>
-<label>Password</label><input type="password" maxlength="45" size="11" name="credential_1" class="formfield" autocomplete="off">
-</li>
-<li><input type="submit" name="Log In" value="Log In" class="formbutton"></li>
-</ul>
-</form></div>
+<div class="login-status login-form" style="padding-top:13px;"><a href="/secure/login.bml">Login</a></div>
 </div></div>
 <div id="hd">
 <div id="masthead">
@@ -151,7 +160,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <h2>Powerful Web Hosting and Domain Names for Home and Business</h2>
 <p class="support-chat"><a class="gtm_chat" href="#chat">Click here to chat with a live specialist.</a></p>
 <a href="/support/contact.bml"><img src="/images/currency-txt/ipw-phone-USD.png" alt="For 24x7 Support, call 1.888.511.HOST." style="float:right; margin-top: 10px;"></a><div style="position: relative;"><div style="position: absolute; left: 325px; top: 15px;" class="norm currency-drop">
-<form name="pick"><input type="hidden" name="__token_timestamp__" value="1482795664"><input type="hidden" name="__token_val__" value="3f3be0a814373081b860191047cde396">
+<form name="pick"><input type="hidden" name="__token_timestamp__" value="1496709063"><input type="hidden" name="__token_val__" value="497d86afa38a68ba525ace5e29364d9f">
 												Country:
 												<img id="margin-right: 10px;" src="/images/icons/CountryFlags/USD-flag.gif" alt="flag"><select name="country" id="countrySelect" onchange="putCookie();"><option value="USD">United States</option>
 <option value="GBP">United Kingdom</option>
@@ -541,7 +550,7 @@ On February 10, 2014, we updated and reorganized our Privacy Policy to better ex
 <li><a href="/support/">Need Help?</a></li>
 <li><a href="/knowledgebase/beta/">Knowledgebase</a></li>
 <li><a href="/support/addResources.bml">Additional Resources</a></li>
-<a href="/support/user-guide/">User Guide</a><br><a href="/product/business-on-tapp/">Business On Tapp</a><br>
+<a href="/support/user-guide/">User Guide</a><br>
 </ul>
 </div>
 <div class="yui-u about-us">
@@ -551,7 +560,6 @@ On February 10, 2014, we updated and reorganized our Privacy Policy to better ex
 <li><a href="/ipower/about/testimonials.bml">Testimonials</a></li>
 <li><a href="/support/contact.bml">Contact Us</a></li>
 <li><a href="/referral/programs.bml">Partnerships</a></li>
-<li><a href="/directory/">Community Directory</a></li>
 <li><a href="/careers/">Careers</a></li>
 </ul>
 </div>
